--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-site: Sidey
+site: Rocco Luiz
 url: #yoururl
-title: Sidey
-description: Simple and minimalistic jekyll blogging theme.
+title: 
+description: 
 twitter:
   username: #yourusername
   card: summary
